# opentelemetry-examples

./: .gitignore  README.md  docker-compose.yml  tail-sampling.md
collector/: aws-otelcol-config.yaml  docker-compose.yml  otelcol-config.yaml
dotnet/: Program.cs  dotnet.csproj
dotnet/Controllers/: TodoController.cs
dotnet/Models/: Todo.cs
dotnet/Properties/: launchSettings.json
go/: go.mod  go.sum  main.go
go/tracing/: aspecto.go  jaeger.go
k8s/: docker-compose.yml  otel-collector-config.yml  otel-collector.yml
k8s/helm/: collector-values.yml
k8s/manifests/: README.md  application-with-agent-sidcar.yml  application.yml  gateway-with-operator.yml  gateway.yml  jaeger.yml  not-instrumented-application.yml  operator-instrumentation.yml  operator-sidecar.yml
k8s/minikube/: deployment-only.yml  jaeger.yml
k8s/trial1/: README.md  collector-values.yaml  commands.sh  kind-config.yml
node/: index.js  package-lock.json  package.json  tracing.aspecto.js  tracing.collector.js  tracing.console.js  tracing.jaeger.js
node-aws/: .gitignore  README.md  makefile  request.http
node-aws/lambdas/: order-api.js  package-lock.json  package.json  process-order.js  tracing.js
node-rabbitmq/: README.md  consumer.js  package-lock.json  package.json  publisher.js  tracing.aspecto.js  tracing.console.js  tracing.jaeger.js
rust/: .env  .gitignore  Cargo.toml  README.md  req.http
rust/migrations/2022-08-13-080838_create_users/: up.sql
rust/src/: main.rs  models.rs  schema.rs  telemetry.rs
rust/src/users/: db_operations.rs  handlers.rs  mod.rs
(+34 files in other folders)
