[package]
name = "opentelemetry-examples-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.1.0"
actix-web-opentelemetry = "0.13.0"
diesel = { version = "1.4.8", features = ["postgres", "r2d2"] }
diesel-tracing = { version = "0.1.6", features = ["postgres"] }
dotenv = "0.15.0"
opentelemetry = { version = "0.18.0", default-features = false, features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.11.0", features = ["reqwest-client", "reqwest-rustls", "http-proto"] }
opentelemetry-semantic-conventions = "0.9.0"
r2d2 = "0.8.10"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.36"
tracing-bunyan-formatter = "0.3.3"
tracing-opentelemetry = "0.18.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.1.2", features = ["serde", "v4"] }